--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
        <section class="resume">
         <div class="container">
            <h3>For a comprehensive overview of my skills, experiences, <br>and achievements, feel free to download my resume below</h3>
-           <a href="Resume - Sakshi Tiwari.pdf" download class="btn">Download CV</a>
+           <a href="Resume - Sakshi Tiwari.pdf" download class="btn">Download</a>
         </div>
         </section>
 
