--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="swiper-slide slide">
                     <img src="webd.png" alt="">
                     <h3>Web Development</h3>
-                    <p>Internshala - 8 weeks - HTML, CSS, Bootstrap, DBMS, PHP, Javascript, React</p>
+                    <p>Internshala - 8 weeks - HTML, CSS, Bootstrap, DBMS, PHP, JS, React</p>
                     <a href="Web Development Training - Certificate of Completion.pdf" target="_blank" class="btn">View Certificate</a>
                 </div>
                 <div class="swiper-slide slide">
@@ -175,7 +175,7 @@
                 </div>
                 <div class="swiper-slide slide">
                     <img src="internship.png" alt="">
-                    <h3>Internship & Job Preparation</h3>
+                    <h3>Job Preparation</h3>
                     <p>Internshala - 4 weeks - Job Hunt, Switching Gears</p>
                     <a href="Internship & Job Preparation Training - Certificate of Completion.pdf" target="_blank" class="btn">View Certificate</a>
                 </div>
@@ -187,6 +187,75 @@
 
     <!--projects section-->
     <section class="projects" id="projects">
+        <!--ECE Projects-->
+        <h1 class="heading hc"><span>Circuits & Creativity</span></h1>
+        <div class="swiper circuits-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="traffic-light.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>Density-based Traffic Light Controller</h3>
+                        <p>Uses Arduino & optimizes signal timings by adjusting light durations based on real-time traffic density, ensuring efficient flow.</p>
+                        <a href="https://github.com/Sbt07/Density-based-Traffic-Light-Controller" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="Movie-recommender-system.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>Movie Recommender System</h3>
+                        <p>Developed a movie recommendation model based on K-nearest neighbors algorithm which recommends movies based on previous interests.</p>
+                        <a href="Movie Recommender System.pdf" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="water-level-sensor.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>Water Level Sensor</h3>
+                        <p>Implemented on a breadboard to detect and measure water levels, facilitating real-time monitoring for various applications.</p>
+                        <a href="https://github.com/Sbt07/Water-level-sensor" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="laptop-price-predictor.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>Laptop Price Predictor</h3>
+                        <p>A ML recommendation model using previous dataset to predict the price of a laptop based on the desired specifications.</p>
+                        <a href="https://github.com/Sbt07/Price-predictor" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="cpu-logisim.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>CPU in Logisim (8086)</h3>
+                        <p>Simulated in Logisim, providing a virtual environment to understand and explore the fundamentals of computer architecture.</p>
+                        <a href="https://github.com/Sbt07/CPU-Logisim" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="breast-cancer-analysis-model.png" alt="" srcset="">
+                    </div>
+                    <div class="content">
+                        <h3>Breast Cancer Analysis Model</h3>
+                        <p>A machine learning model, leveraging data-driven insights to aid in early detection and medical decision-making.</p>
+                        <a href="https://github.com/Sbt07/Breast_Cancer_Analysis" target="_blank" class="btn">Explore</a>
+                    </div>
+                </div>           
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+
+
         <!--Webd Projects-->
         <h1 class="heading h2"><span>Web Stories</span></h1>
         <div class="web-stories">
@@ -241,54 +310,6 @@
         </div>
         <div class="button">
             <a href="" id="see">See More</a>
-        </div>
-
-        <!--ECE Projects-->
-        <h1 class="heading hc"><span>Circuits & Creativity</span></h1>
-        <div class="swiper circuits-slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide slide">
-                    <div class="image">
-                        <img src="traffic-light.png" alt="" srcset="">
-                    </div>
-                    <div class="content">
-                        <h3>Density-based Traffic Light Controller</h3>
-                        <p>Uses Arduino & optimizes signal timings by adjusting light durations based on real-time traffic density, ensuring efficient flow.</p>
-                        <a href="https://github.com/Sbt07/Density-based-Traffic-Light-Controller" target="_blank" class="btn">Explore</a>
-                    </div>
-                </div>
-                <div class="swiper-slide slide">
-                    <div class="image">
-                        <img src="water-level-sensor.png" alt="" srcset="">
-                    </div>
-                    <div class="content">
-                        <h3>Water Level Sensor</h3>
-                        <p>Implemented on a breadboard to detect and measure water levels, facilitating real-time monitoring for various applications.</p>
-                        <a href="https://github.com/Sbt07/Water-level-sensor" target="_blank" class="btn">Explore</a>
-                    </div>
-                </div>
-                <div class="swiper-slide slide">
-                    <div class="image">
-                        <img src="cpu-logisim.png" alt="" srcset="">
-                    </div>
-                    <div class="content">
-                        <h3>CPU in Logisim (4096)</h3>
-                        <p>Simulated in Logisim, providing a virtual environment to understand and explore the fundamentals of computer architecture.</p>
-                        <a href="https://github.com/Sbt07/CPU-Logisim" target="_blank" class="btn">Explore</a>
-                    </div>
-                </div>
-                <div class="swiper-slide slide">
-                    <div class="image">
-                        <img src="breast-cancer-analysis-model.png" alt="" srcset="">
-                    </div>
-                    <div class="content">
-                        <h3>Breast Cancer Analysis Model</h3>
-                        <p>A machine learning model, leveraging data-driven insights to aid in early detection and medical decision-making.</p>
-                        <a href="https://github.com/Sbt07/Breast_Cancer_Analysis" target="_blank" class="btn">Explore</a>
-                    </div>
-                </div>           
-            </div>
-            <div class="swiper-pagination"></div>
         </div>
 
         <!--Mini Projects-->
@@ -360,7 +381,7 @@
        <section class="resume">
         <div class="container">
            <h3>For a comprehensive overview of my skills, experiences, <br>and achievements, feel free to download my resume below</h3>
-           <a href="Resume - Sakshi Tiwari.pdf" download class="btn">Download</a>
+           <a href="Resume - Sakshi Tiwari.pdf" download class="btn">Download CV</a>
         </div>
         </section>
 
