--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--about section-->
     <section class="about" id="about">
         <div class="image">
-            <img src="about.png" alt="abt">
+            <img src="formal_round_grey.png" alt="abt">
         </div>
         <div class="content">
             <h3 class="title">About</h3>
